[package]
name = "hf-chat-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2.9", features = ["loader"] }
derive-new = "0.7"
tokio = "1"
hf-hub = { version = "0.4", features = ["tokio"] }
parking_lot = "0.12"
