[package]
name = "hf-chat-template"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2.10" }
minijinja-contrib = { version = "2.10", features = ["pycompat"] }
derive-new = "0.7"
tokio = "1.45"
hf-hub = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bufreader"
harness = false

[[bench]]
name = "json"
harness = false